# cs43

./: .gitignore  .gitlab-ci.yml  .index.html.swp  .site.hs.swp  README.md  about.markdown  about.rst  class.markdown  contact.markdown  index.html  index.markdown  notes.markdown  pages-hakyll.cabal  resources.markdown  site.cabal  site.hs  stack.yaml  syllabus.markdown
assignments/: assign1.markdown  assign2.markdown  assign3.markdown  assign4.markdown  assign5.markdown  assign6.markdown  assign7.markdown
backup/: index.markdown
css/: .code.css.swp  .custom.css.swp  .tufte.css.swp  code.css  custom.css  default.css  syntax.css  tufte.css
lecture-code/week8/: README.md  week8.cabal
lecture-code/week8/src/: Main.hs
lecture-code/week9/: README.md  notes.markdown  week9.cabal
lecture-code/week9/src/: Main.hs
lecture-notes-2020/: Lec5.markdown  Lec6.markdown  Lec7.markdown
notes/: .01_Why_Functional_Programming.markdown.swp  .02_Introduction_to_Haskell.markdown.swp  .introToHS.markdown.swp  01_Notes_features.markdown  01_Why_Functional_Programming.markdown  02_Introduction_to_Haskell.markdown  02_Why_Functional_Programming.markdown  03_Introduction_to_Haskell.markdown  04_Higher_Order_Functions.markdown  04_Immutability.markdown  06_Typeclasses.markdown  07_Semigroup_and_Monoid.markdown  08_Functor_and_Applicative.markdown  A_Brief_History.markdown  Algebraic_Datatypes.markdown  Applicative.markdown  Folds_Scans_Laziness.markdown  Functor.markdown  Functor_and_Applicative.markdown  Getting_Set_Up.markdown  Higher_Order_Functions.markdown  Introduction_to_Haskell.markdown  L19_Parallel_Programming.markdown  Monad.markdown  Notes_features.markdown  Resources.markdown  Typeclasses.markdown  TypeclassesII.markdown  Week2.markdown  Why_Haskell.markdown  introToHS.markdown
notes-new/: Applicative.markdown
posts/: .2018-12-20-syllabus.markdown.swp  2018-12-20-syllabus.markdown  2019-01-01-IntroToHaskell.markdown  2019-01-02-WhyFP.markdown
slides/: 01_Introduction_To_Haskell.md  Introduction_to_Haskell.md  Motivation_and_History.md  reveal.json
solutions/: assign1.markdown  assign2.markdown  assign4.markdown
starter-code/assignment5/harold/: README.md  harold.cabal  stack.yaml
starter-code/assignment5/harold/src/: Harold.hs  Main.hs  World.hs
(+71 files in other folders)
