name:                week9
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/week9#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable week9
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , parallel >= 3.2
                     , deepseq >= 1.4
