name:                harold
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/harold#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable harold
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , grid >= 7.8
                     , matrix >= 0.2
                     , mtl >= 2.2
                     , monad-loops >= 0.4
                     , random >= 1.1
                     , extra >= 1.1
